{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 17,
  "lineage": "1a446577-f36a-2b56-64b4-dce29646d453",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945348088616:internet-gateway/igw-003c92482b554db5c",
            "id": "igw-003c92482b554db5c",
            "owner_id": "945348088616",
            "tags": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "vpc_id": "vpc-034f3ad302151878b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003c92482b554db5c",
            "id": "r-rtb-04fb6a58adc322dc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04fb6a58adc322dc1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945348088616:route-table/rtb-0af3d3f9e38a5570b",
            "id": "rtb-0af3d3f9e38a5570b",
            "owner_id": "945348088616",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans-private-us-east-1a",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans-private-us-east-1a",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f3ad302151878b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945348088616:route-table/rtb-04fb6a58adc322dc1",
            "id": "rtb-04fb6a58adc322dc1",
            "owner_id": "945348088616",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003c92482b554db5c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans-public",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans-public",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-034f3ad302151878b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b5a19419f909cae",
            "route_table_id": "rtb-0af3d3f9e38a5570b",
            "subnet_id": "subnet-030fd2769430ab6d7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c43fae0dc213bcad",
            "route_table_id": "rtb-04fb6a58adc322dc1",
            "subnet_id": "subnet-06d7bd8917b27aec8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945348088616:subnet/subnet-030fd2769430ab6d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030fd2769430ab6d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "945348088616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans-private-us-east-1a",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans-private-us-east-1a",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "vpc_id": "vpc-034f3ad302151878b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945348088616:subnet/subnet-06d7bd8917b27aec8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d7bd8917b27aec8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "945348088616",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans-public-us-east-1a",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans-public-us-east-1a",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "vpc_id": "vpc-034f3ad302151878b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:945348088616:vpc/vpc-034f3ad302151878b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01cdf392faa3d8158",
            "default_route_table_id": "rtb-0fa072cc843e70525",
            "default_security_group_id": "sg-0e59f12e55b93d0b1",
            "dhcp_options_id": "dopt-0d8ce88cd37865a2c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034f3ad302151878b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa072cc843e70525",
            "owner_id": "945348088616",
            "tags": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans",
              "Owner": "Quintans",
              "Terraform": "true"
            },
            "tags_all": {
              "BU": "Arquitetura",
              "Name": "VPC-Quintans",
              "Owner": "Quintans",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}